# mcp-rs

./: Cargo.toml  README.md  curent.mdx  current-repo.mdx  python-sdk.mdx
examples/: client_example.rs  lifecycle_example.rs  prompt_manager_example.rs  server_test.rs  server_with_prompts.rs  sseserver_with_handlers.rs
python_client/: client.py  requirements.txt  run_client.sh
src/: client.rs  errors.rs  lib.rs  lifecycle.rs  messages.rs  resources.rs  server.rs  server_session.rs  utils.rs
src/client/: client.rs  clientsession.rs  lifecycle.rs  mod.rs  model.rs  notification.rs  progress.rs  request.rs  subscription.rs
src/client/domain/: resources.rs  tools.rs
src/client/handlers/: completion.rs  composite.rs  handshake.rs  mod.rs  prompts.rs  resources.rs  route_handler.rs  tools.rs
src/client/services/: lifecycle.rs  mod.rs  notification.rs  progress.rs  request.rs  resources.rs  service_provider.rs  subscription.rs  tools.rs
src/client/tests/: client_tests.rs  mod.rs  session_tests.rs  transport_tests.rs
src/client/transport/: mod.rs  sse.rs  state.rs  stdio.rs  websocket.rs
src/client/utils/: builders.rs  error.rs  mod.rs
src/protocol/: converters.rs  error.rs  errors.rs  examples.rs  messages.rs  method.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  test.rs  tools.rs  utils.rs  validation.rs
src/server/: mod.rs  server.rs
src/server/handlers/: base.rs  composite.rs  handshake.rs  initialize.rs  initialize_handler.rs  mod.rs  notification_handler.rs  prompts.rs  request_handler.rs  resource_handler.rs  resources.rs  route_handler.rs  tool_handler.rs  tools.rs
src/server/resources/: mod.rs  resource_registry.rs
src/server/services/: mod.rs
src/server/tools/: message_parser.rs  mod.rs  process_manager.rs  tool_registry.rs
src/server/transport/: middleware.rs  mod.rs  sse.rs  (+2 more)
src/tools/: mod.rs  progress.rs  tool_registry.rs
src/transport/: connection_manager.rs  message_handler.rs  middleware.rs  mod.rs  sse.rs  sse_server.rs  stdio.rs  websocket.rs  websocket_server.rs
src/types/: mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs
src/typess/: initialize.rs  mod.rs  prompts.rs  protocol.rs  tools.rs
tool-derive/: Cargo.toml
tool-derive/examples/: calculator.rs
tool-derive/src/: lib.rs
tool-derive/tests/: test_tool.rs
(+13 files in other folders)
