[package]
name = "mcp-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/username/mcp-rs"
readme = "README.md"
keywords = ["ai", "protocol", "mcp", "model-context-protocol"]
categories = ["api-bindings", "asynchronous"]

[workspace]
members = ["tool-derive"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.11"
schemars = "0.8"
jsonschema = "0.17"

futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
log = "0.4"
url = "2.4"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
bytes = "1.5"
tokio-tungstenite = "0.26.2"
base64 = "0.22.1"
mime_guess = "2.0.4"
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
http = "1.2.0"
scopeguard = "1.2"
async-stream = "0.3.5"
anyhow = "1.0.96"
hyper = "1.6.0"
urlencoding = "2.1.3"
env_logger = "0.11.7"
eventsource-client = "0.14.0"

[dev-dependencies]
tokio-test = "0.4"
async-std = { version = "1.12", features = ["attributes"] }
insta = "1.34"
tracing-subscriber = "0.3"

[lib]
name = "mcp_rs"
path = "src/lib.rs"
