[package]
name = "tool-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro for MCP-RS Tool definitions"
license = "MIT"

# Declare this as a procedural macro crate
[lib]
proc-macro = true

# Dependencies for procedural macros
[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Add a dependency on the main crate to access Tool types
[dependencies.mcp-rs]
path = ".."

# Dev dependencies for examples and tests
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio-test = "0.4"
async-std = { version = "1.12", features = ["attributes"] }
insta = "1.34"
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1.36", features = ["full"] }

